syntax = "proto2";
package credit_type;
option go_package = "etop.vn/api/pb/etop/etc/credit_type";

import "gogoproto/gogo.proto";
option (gogoproto.gogoproto_import)         = false;

enum CreditType {
  shop = 1;
}
